# pipecrab

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  cog.toml  pipecrab-maybe-send.patch
.github/workflows/: audio-benchmark-comment.yml  audio-benchmark.yml  ci.yml  conventional-commits.yml  docs-site.yml  pipecrabbie-review.yml  publish.yml  release.yml
crates/adapters/pipecrab-audio-cpal/: CHANGELOG.md  Cargo.toml
crates/adapters/pipecrab-audio-cpal/src/: bridge.rs  config.rs  lib.rs  sink.rs  source.rs  stream.rs
crates/adapters/pipecrab-lm-llamacpp/: CHANGELOG.md  Cargo.toml
crates/adapters/pipecrab-lm-llamacpp/src/: config.rs  lib.rs  worker.rs
crates/adapters/pipecrab-lm-llamacpp/tests/: model.rs  multi_turn.rs
crates/adapters/pipecrab-stt-sherpa/: CHANGELOG.md  Cargo.toml  README.md
crates/adapters/pipecrab-stt-sherpa/src/: backend.rs  config.rs  lib.rs  offline_backend.rs  offline_worker.rs  worker.rs
crates/adapters/pipecrab-stt-sherpa/tests/: offline_transcriber.rs  transcriber.rs
crates/adapters/pipecrab-tts-sherpa/: CHANGELOG.md  Cargo.toml  README.md
crates/adapters/pipecrab-tts-sherpa/src/: backend.rs  config.rs  lib.rs  worker.rs
crates/adapters/pipecrab-tts-sherpa/tests/: synthesizer.rs
crates/adapters/pipecrab-vad-sherpa/: CHANGELOG.md  Cargo.toml  README.md
crates/adapters/pipecrab-vad-sherpa/src/: backend.rs  config.rs  lib.rs  worker.rs
crates/adapters/pipecrab-vad-sherpa/tests/: detector.rs
crates/engine/pipecrab/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-audio/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-audio/benches/: resampler.rs
crates/engine/pipecrab-audio/src/: lib.rs  mock.rs  resampler.rs  rubato_sinc.rs
crates/engine/pipecrab-audio/tests/: echo_passthrough.rs  resampler_stage.rs
crates/engine/pipecrab-core/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-core/src/: frame.rs  lib.rs  processor.rs
crates/engine/pipecrab-core/tests/: alloc.rs
crates/engine/pipecrab-dispatch/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-dispatch/src/: egress.rs  error.rs  ingress.rs  lib.rs  tools.rs  transport.rs
crates/engine/pipecrab-dispatch/tests/: egress.rs  (+2 more)
crates/engine/pipecrab-lm/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-runtime/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-stt/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-tts/: CHANGELOG.md  Cargo.toml
crates/engine/pipecrab-vad/: CHANGELOG.md  Cargo.toml
crates/kokoro-ort/: CHANGELOG.md  Cargo.toml
crates/kokoro-ort/src/: lib.rs
crates/kokoro-web/: CHANGELOG.md  Cargo.toml
crates/kokoro-web/src/: lib.rs
crates/moonshine-ort/: CHANGELOG.md  Cargo.toml
crates/moonshine-ort/src/: lib.rs
crates/moonshine-web/: CHANGELOG.md  Cargo.toml
crates/moonshine-web/src/: lib.rs
crates/pipecrab/: Cargo.toml
crates/pipecrab-audio/: CHANGELOG.md  Cargo.toml
crates/pipecrab-audio-cpal/: Cargo.toml
crates/pipecrab-audio-cpal/src/: bridge.rs  desktop.rs  lib.rs  sink.rs  source.rs  stream.rs
crates/pipecrab-audio/src/: lib.rs  mock.rs
crates/pipecrab-audio/tests/: echo_passthrough.rs
crates/pipecrab-audio/tests/common/: mod.rs
crates/pipecrab-core/: CHANGELOG.md  Cargo.toml
crates/pipecrab-core/src/: frame.rs  lib.rs  processor.rs
crates/pipecrab-core/tests/: alloc.rs
crates/pipecrab-lm/: Cargo.toml
crates/pipecrab-runtime/: CHANGELOG.md  Cargo.toml
crates/pipecrab-runtime/src/: inbound.rs  lib.rs  maybe.rs  offload.rs  outbound.rs  pipeline.rs  stage.rs
crates/pipecrab-runtime/tests/: flush.rs  mailbox_alloc.rs  mailbox_behavior.rs  offload.rs  outbound.rs  pipeline.rs
crates/pipecrab-stt/: CHANGELOG.md  Cargo.toml
crates/pipecrab-stt-moonshine/: CHANGELOG.md  Cargo.toml
crates/pipecrab-stt-moonshine/src/: lib.rs
crates/pipecrab-stt/src/: lib.rs  stage.rs  streaming.rs  transcriber.rs
crates/pipecrab-stt/tests/: buffered.rs  stt_stage.rs
crates/pipecrab-tts/: Cargo.toml
crates/pipecrab-tts/src/: chunker.rs  lib.rs
crates/pipecrab-tts/tests/: chunker.rs
crates/pipecrab-vad/: CHANGELOG.md  Cargo.toml
crates/pipecrab-vad-silero/: CHANGELOG.md  Cargo.toml
crates/pipecrab-vad-silero/src/: lib.rs
crates/pipecrab-vad/src/: debounced.rs  detector.rs  lib.rs  stage.rs
crates/pipecrab-vad/tests/: vad_stage.rs
crates/pipecrab/src/: lib.rs
crates/piper-ort/: Cargo.toml
crates/piper-ort/src/: lib.rs
crates/piper-web/: Cargo.toml
crates/piper-web/src/: lib.rs
crates/silero-ort/: CHANGELOG.md  Cargo.toml
crates/silero-ort/src/: lib.rs
crates/silero-vad/: Cargo.toml
crates/silero-vad-core/: Cargo.toml
crates/silero-vad-core/src/: lib.rs
crates/silero-vad-ort/: Cargo.toml
crates/silero-vad-ort/src/: lib.rs
crates/silero-vad-web/: Cargo.toml
crates/silero-vad-web/src/: lib.rs
crates/silero-vad/src/: lib.rs
crates/silero-web/: CHANGELOG.md  Cargo.toml
crates/silero-web/src/: lib.rs
crates/support/arch/: Cargo.toml
crates/support/smoke/: Cargo.toml
crates/support/test-util/: Cargo.toml
crates/test-util/: Cargo.toml
docs/plans/: pipecrab-stt-sherpa.md  pipecrab-vad-sherpa.md  silero-vad.md
docs/site/: 404.html  index.html  style.css
docs/site/api/: index.html
docs/site/quick-start/: index.html
docs/site/writing-a-pipeline/: index.html
docs/site/writing-a-stage/: index.html
examples/e2e-voice-agent/: Cargo.toml  README.md
examples/e2e-voice-agent/src/: main.rs
examples/echo/: Cargo.toml  README.md
examples/echo/src/: main.rs
examples/lm-llamacpp/: Cargo.toml  README.md
examples/lm-llamacpp/src/: main.rs
examples/lm-llamacpp/tests/: model_pipeline.rs
examples/stt-sherpa/: Cargo.toml  README.md
examples/stt-sherpa-moonshine/: Cargo.toml  README.md
examples/stt-sherpa-moonshine/src/: main.rs
examples/stt-sherpa-moonshine/tests/: model_pipeline.rs
examples/stt-sherpa/src/: main.rs
examples/stt-sherpa/tests/: model_pipeline.rs  resampling.rs
examples/vad-sherpa/: Cargo.toml  README.md
examples/vad-sherpa/src/: main.rs
test-resources/audio/: README.md
(+41 files in other folders)
