[workspace]
resolver = "2"
members = [
    "crates/pipecrab-core",
    "crates/pipecrab-runtime",
    "crates/pipecrab",
    "crates/pipecrab-audio",
    "crates/pipecrab-audio-cpal",
    "crates/pipecrab-stt",
    "crates/pipecrab-stt-moonshine",
    "crates/pipecrab-vad",
    "crates/pipecrab-vad-silero",
    "crates/moonshine-web",
    "crates/moonshine-ort",
    "crates/silero-vad",
    "crates/silero-vad-web",
    "crates/silero-vad-ort",
    "crates/kokoro-web",
    "crates/kokoro-ort",
    "crates/test-util",
    "examples/echo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/SheaHawkins/pipecrab"

[workspace.dependencies]
# Internal path deps carry a `version` alongside the `path`: the `path` drives
# local workspace builds, and `cargo publish` rewrites each into a plain
# crates.io `version` dependency. A path-only dep would block publishing.
pipecrab            = { path = "crates/pipecrab", version = "0.1.0" }
pipecrab-core       = { path = "crates/pipecrab-core", version = "0.1.0" }
pipecrab-runtime    = { path = "crates/pipecrab-runtime", version = "0.1.0" }
pipecrab-audio      = { path = "crates/pipecrab-audio", version = "0.1.0" }
pipecrab-audio-cpal = { path = "crates/pipecrab-audio-cpal", version = "0.1.0" }
pipecrab-stt        = { path = "crates/pipecrab-stt", version = "0.1.0" }
pipecrab-vad        = { path = "crates/pipecrab-vad", version = "0.1.0" }
moonshine-web       = { path = "crates/moonshine-web", version = "0.1.0" }
moonshine-ort       = { path = "crates/moonshine-ort", version = "0.1.0" }
silero-vad          = { path = "crates/silero-vad", version = "0.1.0" }
silero-vad-web      = { path = "crates/silero-vad-web", version = "0.1.0" }
silero-vad-ort      = { path = "crates/silero-vad-ort", version = "0.1.0" }
kokoro-web          = { path = "crates/kokoro-web", version = "0.1.0" }
kokoro-ort          = { path = "crates/kokoro-ort", version = "0.1.0" }
# Dev-only; `publish = false`, so it never needs a version.
pipecrab-test-util  = { path = "crates/test-util" }
