[workspace]
resolver = "2"
members = [
    "crates/pipecrab-core",
    "crates/pipecrab-runtime",
    "crates/pipecrab",
    "crates/pipecrab-audio",
    "crates/pipecrab-audio-cpal",
    "crates/pipecrab-stt",
    "crates/pipecrab-tts",
    "crates/pipecrab-vad",
    "crates/test-util",
    "examples/echo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/SheaHawkins/pipecrab"

[workspace.dependencies]
# Internal path deps carry a `version` alongside the `path`: the `path` drives
# local workspace builds, and `cargo publish` rewrites each into a plain
# crates.io `version` dependency. A path-only dep would block publishing.
pipecrab            = { path = "crates/pipecrab", version = "0.1.0" }
pipecrab-core       = { path = "crates/pipecrab-core", version = "0.1.0" }
pipecrab-runtime    = { path = "crates/pipecrab-runtime", version = "0.1.0" }
pipecrab-audio      = { path = "crates/pipecrab-audio", version = "0.1.0" }
pipecrab-audio-cpal = { path = "crates/pipecrab-audio-cpal", version = "0.1.0" }
pipecrab-stt        = { path = "crates/pipecrab-stt", version = "0.1.0" }
pipecrab-tts        = { path = "crates/pipecrab-tts", version = "0.1.0" }
pipecrab-vad        = { path = "crates/pipecrab-vad", version = "0.1.0" }
# Dev-only; `publish = false`, so it never needs a version.
pipecrab-test-util  = { path = "crates/test-util" }
