[workspace]
resolver = "2"
# Crates are grouped by architectural role, not flattened. The grouping is
# cosmetic to Cargo (deps resolve by name), but it makes the layering visible
# and is enforced by the `layering` test in crates/support/arch:
#   engine/   — the pipecrab framework; depends only downward (core < runtime
#               < trait crates < facade).
#   adapters/ — bridges an external engine or device to a capability trait
#               (e.g. cpal, or a future sherpa-onnx model crate).
#   support/  — dev-only tooling; never published, never a production dep.
members = [
    "crates/engine/*",
    "crates/adapters/*",
    "crates/support/*",
    "examples/*",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/SheaHawkins/pipecrab"

[workspace.dependencies]
# Internal path deps carry a `version` alongside the `path`: the `path` drives
# local workspace builds, and `cargo publish` rewrites each into a plain
# crates.io `version` dependency. A path-only dep would block publishing.
pipecrab            = { path = "crates/engine/pipecrab", version = "0.3.0" }
pipecrab-core       = { path = "crates/engine/pipecrab-core", version = "0.3.0" }
pipecrab-runtime    = { path = "crates/engine/pipecrab-runtime", version = "0.3.0" }
pipecrab-audio      = { path = "crates/engine/pipecrab-audio", version = "0.3.0" }
pipecrab-audio-cpal = { path = "crates/adapters/pipecrab-audio-cpal", version = "0.3.0" }
pipecrab-lm         = { path = "crates/engine/pipecrab-lm", version = "0.3.0" }
pipecrab-stt        = { path = "crates/engine/pipecrab-stt", version = "0.3.0" }
pipecrab-stt-sherpa = { path = "crates/adapters/pipecrab-stt-sherpa", version = "0.3.0" }
pipecrab-tts        = { path = "crates/engine/pipecrab-tts", version = "0.3.0" }
pipecrab-vad        = { path = "crates/engine/pipecrab-vad", version = "0.3.0" }
pipecrab-vad-sherpa = { path = "crates/adapters/pipecrab-vad-sherpa", version = "0.3.0" }
# Dev-only; `publish = false`, so it never needs a version.
pipecrab-test-util  = { path = "crates/support/test-util" }
sherpa-onnx         = "=1.13.4"
