[package]
name = "kokoro-web"
description = "Browser (onnxruntime-web / WASM, Web Worker) engine for the Kokoro text-to-speech model — the wasm backend for a future pipecrab TTS model crate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
