[package]
name = "moonshine-web"
description = "Browser (onnxruntime-web / WASM, Web Worker) engine for the Moonshine speech-to-text model — the wasm backend behind pipecrab-stt-moonshine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
