[package]
name = "pipecrab-lm"
description = "The language-model interface for pipecrab: the LanguageModel trait plus a conversation-tracking LmStage adapter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# The crate is `-lm`, not `-llm`; carry "llm" as a keyword for discoverability.
keywords = ["llm", "language-model", "conversation", "ai"]

[dependencies]
pipecrab-core    = { workspace = true }
pipecrab-runtime = { workspace = true }
async-trait      = "0.1"
# A lib-level dep (not just dev): the `TokenStream` alias is a boxed
# `futures::Stream`, so the trait's public surface names `futures` types.
futures          = "0.3"
