[package]
name = "pipecrab-runtime"
description = "Runtime-agnostic async orchestration for pipecrab: Inbound, Outbound. Built on futures."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pipecrab-core = { workspace = true }
futures       = "0.3"
async-trait   = "0.1"

[dev-dependencies]
pipecrab-test-util = { workspace = true }
