[package]
name = "pipecrab-stt-moonshine"
description = "Moonshine speech-to-text behind the pipecrab-stt seam, running on ONNX Runtime (native) or in the browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pipecrab-stt = { workspace = true }

# The engine is chosen by target: native ONNX Runtime on the host, a WebAssembly
# worker in the browser. Each lives behind the same Transcriber seam.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moonshine-ort = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
moonshine-web = { workspace = true }
