[package]
name = "pipecrab-stt-moonshine"
description = "Moonshine speech-to-text wired into pipecrab's Transcriber trait (engine backends live in the moonshine-web / moonshine-ort crates)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pipecrab-stt = { workspace = true }
