[package]
name = "pipecrab-vad-silero"
description = "Silero VAD wired into pipecrab's VoiceActivityDetector trait (engine backends live in the silero-vad-ort / silero-vad-web crates, over the shared silero-vad model core)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pipecrab-vad = { workspace = true }
