[package]
name = "pipecrab-vad"
description = "The voice-activity-detection seam for pipecrab: the VoiceActivityDetector trait, the swappable VAD capability."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pipecrab-core    = { workspace = true }
pipecrab-runtime = { workspace = true }
async-trait      = "0.1"
