[package]
name = "pipecrab-vad"
description = "The voice-activity-detection interface for pipecrab: the VoiceActivityDetector trait that gates a pipeline on speech."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pipecrab-core    = { workspace = true }
pipecrab-runtime = { workspace = true }
async-trait      = "0.1"

[dev-dependencies]
futures = "0.3"
