[package]
name = "pipecrab"
description = "Sans-IO voice-agent pipelines with a tokio runtime bundled in."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pipecrab-core = { workspace = true }
tokio        = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
tokio-util   = { workspace = true, features = ["rt"] }
async-trait  = { workspace = true }
