[package]
name = "pipecrab"
description = "Sans-IO voice-agent pipelines with a runtime-agnostic async layer bundled in."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pipecrab-core = { workspace = true }
pipecrab-runtime = { workspace = true }