[package]
name = "silero-ort"
description = "Native onnxruntime (ort) engine for the Silero voice-activity-detection model — the host backend behind pipecrab-vad-silero."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
