[package]
name = "silero-vad-ort"
description = "Native onnxruntime (ort) engine for Silero VAD — the host backend behind pipecrab-vad-silero; model logic lives in the silero-vad core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
