[package]
name = "silero-vad-web"
description = "Browser (transformers.js / WASM, Web Worker) engine for Silero VAD — the wasm backend behind pipecrab-vad-silero; model logic lives in the silero-vad core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
