[package]
name = "pipecrab-audio-cpal"
description = "Desktop (cpal + rtrb) audio backend for pipecrab: CpalSource / CpalSink over the pipecrab-audio traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# An adapter: bridges cpal (an external engine/device) to the pipecrab-audio
# traits. May depend on trait/facade/runtime/core; nothing in engine/ may
# depend back on it.
[package.metadata.pipecrab]
layer = "adapter"

[dependencies]
pipecrab-audio = { workspace = true }
cpal           = "0.15"
rtrb           = "0.3"
futures        = "0.3"
async-trait    = "0.1"
